@@ -28,6 +28,12 @@ has 'show_timing' => (
     },
 );
 
+has 'set_process_name' => (
+    is      => 'ro',
+    isa     => 'Bool',
+    default => 0,
+);
+
 has 'builder' => (
     is      => 'ro',
     isa     => 'Test::Builder',
